* Cutscene Remover option has been added, with 3 different options (PUT MORE DESCRIPTION HERE)
* Enabled randomizing the two single dusk fights in STT where the enemy is invulnerable
* When bosses as enemies is enabled, do not allow more than one boss per spawnpoint, which will hopefully help with stability

2.3.0
* Added an option to enable randomizing Final Xemnas (and data), which requires the newest version of Model Manager to be used (which supports LUA scripts)
* Added an option to treat Nobodys as a separate type of enemy, depending on the other options enabled this can cause some enemies to randomize very predictably
* Updated several bosses allowed replacements to reduce the possibility of known softlocks/crashes (common ones involving Barbossa, Grim Reaper 2, Demyx)
* Remove Scar Ghost from being able to appear as a boss enemy
* Fixed MSN files getting created without the .bar extension
* Fixed cases where some bosses were not getting properly changed when a specific boss was selected
* Prevent any attempt at randomizing Battle of 1K, to prevent crashes
* Prevent bosses from spawning in The Ravine or Checkpoint rooms, when bosses as enemies mode is enabled.
* Fixed Issue where Grim Reaper II in it's vanilla location in Wild mode could result in a softlock
* Due to an RC Related softlock, Axel Data will never replace Xaldin, it will always be Axel II
* Due to a crash during DM, if Luxord Data is supposed to replace Luxord, the fight will stay vanilla Luxord
* Fixed issue where Hydra's MSN was not being properly replaced, causing bosses like Luxord or Demyx to softlock
* Moved Spawn locations in Armor Xemnas 1 fight to prevent bosses getting softlocked by landing strangely on the throne
* Move Spawn location for Groundshaker in front of Sora and to ground level
* Fully disable Xemnas I's DM, so Sora's HP is no longer locked into always draining during the fight